<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/red"
        android:layoutMode="opticalBounds"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ly_about_toolbar_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/IV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/toolbar"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/IV"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="V.2.0.0"
            android:textSize="20sp" />
    </LinearLayout>



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">
        <RelativeLayout

            android:id="@+id/rl_function_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/textarea_border"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ly_about_tv_function_introduction"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/ic_chevron_right_grey600_24dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLength="15" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="#E9E9EA"/>
        <RelativeLayout

            android:id="@+id/rl_revisions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textarea_border"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ly_about_tv_revisions"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/ic_chevron_right_grey600_24dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLength="15" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="#E9E9EA"/>

    </LinearLayout>


</RelativeLayout>